--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,14 @@ body{
   color:white
 }
 .div-1{
-  padding:1% 4%;
-  
+  padding:1% 4%; 
+}
+.heading1{
+  display:flex
+}
+.device-table-div{
+  width:100%;
+  margin:0 5%;
 }
 table{
   /* padding:1%; */
@@ -33,6 +39,18 @@ th{
   text-align: center;
 }
 
+.table-cell-red{
+  border:2px solid black;
+  background-color: red;
+}
+.table-cell-yellow{
+  border: 2px solid black;
+  background-color: yellow;
+}
+.table-cell-green{
+  border:2px solid black;
+  background-color: green;
+}
 select{
   padding:1% 10%;
   width:100%;
