--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,22 @@ body{
   color:white
 }
 .div-1{
-  padding:1% 4%;
+  /* padding:1% 4%; */
+  width: 100%;
   
+}
+.switch-div{
+  position: relative;
+  display: flex;
+  padding-top: 50px;
+  padding-left: 40px;
+  
+}
+.switch-cell{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 6vh;
 }
 table{
   /* padding:1%; */
@@ -42,12 +56,12 @@ tr:nth-child(odd){
   background-color: rgb(33, 33, 33);
 }
 
-.switch{
+/* .switch{
   background-color: rgb(41, 102, 194);
   color:white;
   cursor: pointer;
   padding:5% 20%;
-}
+} */
 .color-cell{
   background-color: white;
   border:2px solid black;
@@ -55,12 +69,13 @@ tr:nth-child(odd){
   text-align: center;
   width: 200px;
   
+  
 }
 
 .color-cell-esp{
   background-color: white;
   border:2px solid black;
-  padding:1%;
+  padding-top:20px;
   text-align: center;
   width: 200px;
 }
@@ -84,4 +99,60 @@ tr:nth-child(odd){
     font-size:15px;
     padding:1%;
   }
+}
+
+/* The switch - the box around the slider */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  /* -webkit-transition: .4s;
+  transition: .4s; */
+  border-radius: 34px;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  /* -webkit-transition: .4s;
+  transition: .4s; */
+  border-radius: 50%;
+}
+
+input:checked + .slider {
+  background-color: #2196F3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
 }
